--- a/sampleBiometric/sampleBiometric/Base.lproj/Main.storyboard
+++ b/sampleBiometric/sampleBiometric/Base.lproj/Main.storyboard
@@ -61,6 +61,9 @@
                                         <rect key="frame" x="0.0" y="37.666666666666657" width="275" height="37.333333333333343"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
+                                        <connections>
+                                            <outlet property="delegate" destination="xov-4d-lMW" id="m3R-IW-u7a"/>
+                                        </connections>
                                     </textField>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HUU-Y4-zk4">
                                         <rect key="frame" x="0.0" y="74.999999999999972" width="275" height="37.666666666666657"/>
@@ -72,6 +75,9 @@
                                         <rect key="frame" x="0.0" y="112.66666666666664" width="275" height="37.333333333333329"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
+                                        <connections>
+                                            <outlet property="delegate" destination="xov-4d-lMW" id="tK0-8k-z38"/>
+                                        </connections>
                                     </textField>
                                 </subviews>
                                 <constraints>
